cluster-k8s-local/applications/desafiobossa/bossa-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: desafiobossa
  namespace: argocd
spec:
  host: desafiobossa.argocd.svc.cluster.local
  subsets:
    - name: stable   
    - name: canary
